Fix vertical alignment of table cells to middle

--- a/client/src/css/globalStyles.css
+++ b/client/src/css/globalStyles.css
@@ -21,5 +21,8 @@ h5 {
 .nav-link.active {
     color: white !important;
     background-color: #136912 !important;
+}
 
+td {
+    vertical-align: middle;
 }
